# blog-writter

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  azure.yaml  pyproject.toml
drafts/: landing-zone-to-secure-ai-part-1.excalidraw  landing-zone-to-secure-ai-part-1.md  landing-zone-to-secure-ai-part-1.sources.json
evals/: README.md  __init__.py  agent-evals-on-foundry.json  agentic-landing-zones.json  ai-gateway-patterns.json  runner.py
infra/: main.bicep
infra/modules/: app.bicep  foundry-rbac.bicep
knowledge_base/: learn_scopes.yaml
knowledge_base/style_corpus/: README.md  _structural-patterns.md  cloud-wire-private-agents.md
mcp_servers/: __init__.py
mcp_servers/learn_browser/: README.md  __init__.py  __main__.py  cache.py  core.py  server.py
samples/landing-zone-to-secure-ai/: README.md  lab-build.md
samples/landing-zone-to-secure-ai/infra/: README.md  main.bicep  main.bicepparam
src/blog_writer/: __init__.py  cli.py  config.py  observability.py
src/blog_writer/agents/: __init__.py  base.py  critic.py  diagrammer.py  fact_checker.py  ideation.py  internal_knowledge.py  orchestrator.py  planner.py  poc_builder.py  research.py  stylist.py  writer.py
src/blog_writer/models/: __init__.py  config.py  providers.py
src/blog_writer/prompts/: __init__.py  critic.md  diagrammer.md  (+9 more)
tests/: test_excalidraw.py  test_fs.py  test_improve.py  test_learn_browser_mcp.py  test_learn_browser_server.py  test_learn_mcp_integration.py  test_learn_scopes.py  test_models_providers.py  test_observability.py  test_poc_retry.py  test_style.py  test_ui_and_revise.py  test_user_sources.py  test_web_search.py  test_workflow_smoke.py
ui/: __init__.py  server.py
ui/static/: app.js  index.html  style.css
(+20 files in other folders)
